[gd_scene load_steps=3 format=3 uid="uid://bs0f617h5k5u4"]

[ext_resource type="Script" uid="uid://qnvbgg883dg5" path="res://game/scripts/radial_menu.gd" id="1_nsbp6"]
[ext_resource type="Texture2D" uid="uid://cdgedffnin6fh" path="res://icon.svg" id="2_64pwb"]

[node name="HUD" type="CanvasLayer"]

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Control" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Control2" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="RadialMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nsbp6")

[node name="WheelOrigin" type="Control" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RomboCentro" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.7853982
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector0" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -147.0
offset_right = 228.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector1" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = 30.0
offset_right = 229.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector2" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 93.0
offset_right = 71.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector3" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 22.0
offset_right = -96.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector4" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -146.0
offset_right = -96.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector5" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -234.0
offset_right = 63.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")
